--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ streamlit==0.89.0
 opencv-python==4.5.3.56
 cvzone==1.5.0
 tensorflow==2.6.0
-# Add any other dependencies your project may require
+pip install --upgrade pip
+pip install numpy
